<resources>
    <string name="app_name">four_meals_dining</string>
    <string name="_4_meals">FOUR MEALS</string>
    <string name="welcome_to">Welcome to</string>
    <string name="today_s_menu">Popular Today.</string>
    <string name="food_item">Food Item</string>
    <string name="price">Price</string>
    <string name="login">LOGIN</string>
    <string name="username_reg_number">Username/Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="continue_">CONTINUE</string>
    <string name="name">First Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="by_clicking_submit_below_i_agree_to">By clicking submit below, I agree to ....</string>
    <string name="_18_20">$18.20</string>
    <string name="food">Food</string>
    <string name="checkout">Checkout</string>
    <string name="order">Order</string>
    <string name="serving_health_saving_time">Serving health, saving time.</string>
    <string name="hungry_today">What are you eating today?</string>
    <string name="see_all"><u>See All</u></string>
    <string name="popular_today">Popular Today</string>
    <string name="healthy_suggestion">Healthy Suggestion</string>
    <string name="health_words">Hey Buddy! We care about your health. Here\'s our healthy suggestion.</string>
    <string name="more"><u>More</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">Sort by</string>
    <string name="cart">Cart</string>
    <string name="confirmed">Pending</string>
    <string name="available">Available</string>
    <string name="add">Add</string>
    <string name="hey_admin">HEY ADMIN!</string>
    <string name="meal_name">Meal Name</string>
    <string name="what_are_you_serving_today">What are you serving today?</string>
    <string name="meal_details">Meal details:</string>
    <string name="sign_up">SIGN UP</string>
    <string name="app_label">4 Meals</string>
    <string name="pending">Pending</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="orders">Orders</string>
    <string name="num_placeholders">2</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>

</resources>