<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetailsFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="10dp"
                android:text="@string/meal_details"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mealNam"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"

                android:hint="@string/meal_name"
                app:boxBackgroundColor="@color/whitesmoke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_mealName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#546E7A"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/price"
                app:boxBackgroundColor="@color/whitesmoke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#546E7A"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUploadImage"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableTop="@drawable/ic_baseline_image_24"
                android:text="Upload Image" />

            <ImageView
                android:id="@+id/IVUploadPicture"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/image_frame" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/add"
                android:textStyle="bold" />


        </LinearLayout>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>